--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ edit_uri: edit/main/docs/
 theme:
   name: material 
   palette:
-    - primary: deep purple
+    - primary: "#543076"
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
